--- a/daily_tracker/templates/navbar.html
+++ b/daily_tracker/templates/navbar.html
@@ -12,7 +12,7 @@
         <li><a href="{% url 'sign-up' %}">Sign up</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
-        <li><a href=""><i class="material-icons">view_module</i></a></li>
+        <li><a href="{% url 'view-all-tables' %}"><i class="material-icons">view_module</i></a></li>
         <li><a href="{% url 'create-table' %}"><i class="material-icons">refresh</i></a></li>
         <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
       </ul>
