--- a/daily_tracker/templates/view_table.html
+++ b/daily_tracker/templates/view_table.html
@@ -1,48 +1,43 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
 {% load static %}
 {% block title %}{{table.name}} {% endblock %}
 {% block content %}
 {% load custom_tags %}
 
-{{table.name}}
-<table style="margin-left: 3%;width: 70%;" class=" responsive-table striped">
+{{table.name}}  <a href="{% url 'delete-table' table.pk %}">Delete</a>
+
+<table style="margin-left: 3%;width: 70%; box-shadow: 5px,7px rgba(128, 128, 128, 0.561);" class=" responsive-table striped">
     <tr>
-        <th style="display: flex;justify-content: center;">
-            Ticker
-        </th>
-        <th>
-            Date
-        </th>
+        <th>(action)</th>           
+        
+        <th style="display: flex;justify-content: center;"> Ticker </th>
+          
+        <th > Date </th>
+        
         {% for column in table.infos.all %}
-        <th style="font-size: 12px; width: 10%;">
-            {{column.name}}
-        </th>
-        {% endfor %}
+        <th style="font-size: 12px; width: 10%;"> {{column.name}} </th>           
+        {% endfor %}  
     </tr>
+
     {% for row in table.row.all %}
     <tr>
-        <td style="display: flex;justify-content: center;">
+        <td><a href="{% url 'remove-row'}"></a><i class="far fa-trash-alt"></i></td>
+        <td style="display: flex;justify-content: center;">  {{row.stock}} </td>
 
-            {{row.stock}}
-
-        </td>
-        <td>
-            {{row.date.date}}
-        </td>
+        <td>{{row.date.date}} </td>
+            
         {% for column in table.infos.all %}
-        <td>
-            {{row|this_better_work:column}}
-        </td>
+            {% with field_data=row|this_better_work:column  %}
+            {% if field_data.info == column %}
+            <td> {{field_data.amount}}</td>
+            {% endif %}
+            {% endwith %}
         {% endfor %}
-        {% endfor %}
-
-
-
-
-
+    </tr>
+    {% endfor %}
 
     <tr>
+        
         <form action="" method="POST">
             {% csrf_token %}
             <td style="width :5%">{{form.ticker}} </td>
