--- a/accounts/templates/sign_up.html
+++ b/accounts/templates/sign_up.html
@@ -1,6 +1,7 @@
 {%extends 'base.html'%}
 {% load crispy_forms_tags %}
 {% load static %}
+{% load materializecss %}
 {%block title%} Signup{%endblock%}
 {%block content%}
 
@@ -12,7 +13,7 @@
   </div>
 
   <div class="sign_up_form">
-    {{sign_up_form}}
+    {{sign_up_form|materializecss}}
     <button class="waves-effect waves-teal btn ">Sign Up</button>
   </div>
 
