--- a/daily_tracker/templates/navbar.html
+++ b/daily_tracker/templates/navbar.html
@@ -1,7 +1,7 @@
 
 <div class="navbar-fixed">
-<nav class=" navbar-fixed">
-  <div class="nav-wrapper">
+<nav >
+  <div class="nav-wrapper green">
     <a href="#!" class="brand-logo">Logo</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
