--- a/daily_tracker/templates/base.html
+++ b/daily_tracker/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&family=Train+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'style.css' %}">
@@ -27,6 +29,9 @@
             });
 
         </script>
+        <script>$(document).ready(function(){
+            $('.tooltipped').tooltip();
+          }); </script>
    {% block js %}
    {% endblock %}
 </body>
